functionality for allowing bluetooth devices to reconnect properly

--- a/setup_files/thingsboard-gateway.service
+++ b/setup_files/thingsboard-gateway.service
@@ -5,6 +5,7 @@ Wants=network-online.target wait-for-dns.service
 
 [Service]
 ExecStart=/usr/bin/python3 /home/pi/thingsboard-gateway/thingsboard-gateway/thingsboard_gateway/tb_gateway.py
+ExecStopPost=/home/pi/thingsboard-gateway/setup_files/bluetooth-kill.sh
 
 [Install]
 WantedBy=multi-user.target
